--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "jwt-decode": "^4.0.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^7.8.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
